# test

./: .gitignore  README.md  release_note.txt
.github/: pull_request_template.md
component/at_cmd/: atcmd_bt.c  atcmd_ftl.c  atcmd_isp.c  atcmd_stub.c  atcmd_sys.c  atcmd_wifi.c  log_service.c
component/ethernet_mii/: ethernet_mii.c  ethernet_usb.c
component/example/amazon_freertos/: readme.md
component/example/audio_helix_aac/: README.txt  example_audio_helix_aac.c
component/example/audio_helix_mp3/: README.txt
component/example/bcast/: readme.txt
component/example/cJSON/: readme.txt
component/example/fatfs/: readme.TXT
component/example/http_client/: readme.txt
component/example/http_download/: readme.txt
component/example/httpc/: readme.txt
component/example/httpd/: readme.txt
component/example/kvs_producer_mmf/: example_kvs_producer_mmf.c  example_kvs_producer_mmf_video_switch.c  module_kvs_producer.c  readme.md
component/example/kvs_webrtc_mmf/: example_kvs_webrtc_joint_test_mmf.c  example_kvs_webrtc_mmf.c  example_kvs_webrtc_playback_mmf.c  kvs_webrtc_mmf.cmake  module_kvs_webrtc.c  module_kvs_webrtc.h  readme.md  sample_config_webrtc.h
component/example/mcast/: readme.txt
component/example/media_fmp4/: example_media_fmp4.c
component/example/media_framework/: example_media_framework.c  example_media_framework.h  media_framework.cmake  mmf2_example_2way_audio_init.c  mmf2_example_2way_audio_opus_init.c  mmf2_example_a_init.c  mmf2_example_a_opus_init.c  mmf2_example_aacloop_init.c  mmf2_example_audioloop_init.c  mmf2_example_g711loop_init.c  mmf2_example_i2s_audio_init.c  mmf2_example_opusloop_init.c  mmf2_example_pcm_array_audio_init.c  mmf2_example_rtp_aad_init.c  mmf2_example_rtp_opusd_init.c  readme.txt
component/example/media_mp4_demuxer/: example_media_mp4_demuxer.c
component/example/media_uvcd/: example_media_uvc.c  example_media_uvcd.h  readme.txt  usbd_uvc_parm.c
component/example/media_video_to_storage/: example_media_video_to_storage.c
component/example/mqtt/: readme.txt
component/example/nn_file_tester/: example_nn_file_tester.c  mmf2_example_vipnn_facedet_test_init.c  mmf2_example_vipnn_facerecog_test_init.c  mmf2_example_vipnn_objectdet_test_init.c  readme.txt
component/example/nonblock_connect/: readme.txt
component/example/ota_http/: readme.txt
component/example/qr_code_scanner/: example_qr_code_scanner.c  readme.txt
component/example/sd_hotplug/: readme.txt
component/example/sntp_showtime/: readme.txt
component/example/socket_select/: readme.txt
component/example/socket_tcp_trx/: readme.txt
component/example/sqlite/: app_example.c  example_sqlite.c  example_sqlite.h  libsqlite.cmake  readme.txt  sqlite.cmake
component/example/ssl_download/: readme.txt
component/example/ssl_server/: example_ssl_server.c  readme.txt
component/example/std_file/: example_std_file.c  readme.TXT
component/example/tcp_keepalive/: readme.txt
component/example/usb_cdc/: example_usb_cdc.c  readme.txt
component/example/usb_dfu_ota/: example_usb_dfu_ota.c  readme.txt  usb_dfu_ota.cmake
component/example/usb_example/: example_media_rtsp_ethernet.c  example_usb_dfu_ota.c  example_usbd_cdc_acm_new.c  example_usbd_msc_new.c  example_usbh_msc_new.c  usb_example.c  usb_example.cmake
component/example/usb_mass_storage/: example_usb_msc.c  readme.txt
project/realtek_amebapro2_v0_example/GCC-RELEASE/bootloader/: CMakeLists.txt  rtl8735b_boot_mp.ld
tools/AmebaZII_PGTool_v1.2.24/: setting.xml
(+368 files in other folders)
